--- a/SeriesMVVM/Views/SeriePage.xaml
+++ b/SeriesMVVM/Views/SeriePage.xaml
@@ -25,7 +25,7 @@
                     x:Name="TbTitre"
                     Height="34"
                     Width="460"
-                    Text="{Binding Titre, Mode=TwoWay}"
+                    Text="{Binding SerieToAdd.Titre, Mode=TwoWay}"
                     Background="#2A2A2A"
                     BorderBrush="#3A3A3A"
                     Foreground="#FFFFFF"
@@ -50,7 +50,7 @@
                     x:Name="TbResume"
                     Height="120"
                     Width="460"
-                    Text="{Binding Resume, Mode=TwoWay}"
+                    Text="{Binding SerieToAdd.Resume, Mode=TwoWay}"
                     AcceptsReturn="True"
                     TextWrapping="Wrap"
                     Background="#2A2A2A"
